--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"bot_token": "TOKEN", "admin_ids": ["5588464519"], "user_file": "users.json", "log_file": "log.txt", "cooldown_time": 300, "admin_balances": {"5588464519": 8769900}}
+{"bot_token": "7469650515:AAGdTrFtqoi2WxrkgNcxnyyMu9jTQxYOc88", "admin_ids": ["6512242172"], "user_file": "users.json", "log_file": "log.txt", "cooldown_time": 300, "admin_balances": {"5588464519": 8769900}}
